--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
 # command to install dependencies
 install:
     - pip install -r dev-requirements.txt
+    - pip instal .
     - pip install pytest-cov
 # command to run tests
 script:
