--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 data/**/sub-*
 data/derivatives/**/*.tsv
 data/sourcedata
+data/participants.tsv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
