--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
 install:
     - pip install -r dev-requirements.txt
     - pip install .
-    - pip install pytest-cov
+    - pip install pytest-cov codecov
 # command to run tests
 script:
    - pytest --cov=codecov
