--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -32,7 +32,7 @@ jobs:
         pip install .
 
     - name: Run tests and generate coverage report
-      run: pytest --cov=./ --cov-report=xml
+      run: pytest --cov adie --cov-report xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1.2.1
