#22 Migrate neuroimaging BIDS data to the main BIDS directory  (#23)
* added first draft of conversion script - work still needed due to error

* code is now broken down into small functions - v nice. Works on one participant although need to try edge cases. See script for TODOs

* Current version of cisc_to_adie script, and heudiconv scripts and .tsv output

* Here's the working version of the heuristic.py file that is called by hdconv_2.py

* made paths universal. Will test on the psych server now

* Script works with universal paths on one participat in test_data/. Next to test with all participants

* script has universal paths and has user input

* get_metadata.py and run_heudiconv.py use universal paths and have command line user input

* created plan for the script that will move (assimilate) bids neuro data from wills_dir to proper BIDS_dir

* created two scripts for assimilate program: one for functions, and another for running them

* updated to both files

* created functions to make destination directories in BIDS_data

* added copy func

* all functions now work copy files

* added usage notes to each script. Now deployable

* deleted duplicate line

* deleted redundent script

* ADD Mac os related files to gitignore

* CHORE clean up missed out DS store

* EHN HDC conversion clean up

* EHN rearrange the direcotry to package setup standard

* add readme to the script folder
* clarify jobs of the scripts
* remove redundant file

* FIX wrong file git push

* deleted get_metadata.py script and incroperated it into run_heudivonv.py with a switch

* cleaned up function descriptions in src/migrate.py

* created dataframe showing missing data

* script makes dataframe showing data availability re: mind wandeirng and T1 scans

* option to save out dataframe and paths universal

* updated README

* moved function files from src/ to adie/

* updated doctrings

* tested and working

* broken: relat

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 test/data/bids_test/derivatives/*
-
+**/.DS_Store
 # editor
 .vscode
 .*.sw?
@@ -148,3 +148,8 @@ dmypy.json
 
 # libreoffice lockfile
 *.~lock*
+
+# bash profile
+
+.bash_profile
+bashrc
